adicionado primeira logica do deposit e dos transactions

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 				<div class="col-lg-7">
 					<div id="FILTER"></div>
 					<div id="EXPORT"></div>
-					<div id="TRANSACTIONS"></div>
+					<div id="TRANSACTIONS">
+						
+					</div>
 				</div>
 			</div>
 		</div>
