adicionado bastante coisa

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 				<div class="col-lg-7">
 					<div id="FILTER"></div>
 					<div id="EXPORT"></div>
-					<div id="TRANSACTIONS">
-						
-					</div>
+					<div id="TRANSACTIONS"></div>
 				</div>
 			</div>
 		</div>
