--- a/index.html
+++ b/index.html
@@ -12,26 +12,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
 <body class="bg-light">
-	<div id="navbar"></div>
-	<div id="modais"></div>
-
-	<main style="margin-top: 100px; margin-bottom: 50px;">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-5">
-					<div id="BALANCE"></div>
-					<div id="EXPENSES"></div>
-					<div id="INVESTMENTS"></div>
-				</div>
-				<div class="col-lg-7">
-					<div id="FILTER"></div>
-					<div id="EXPORT"></div>
-					<div id="TRANSACTIONS"></div>
-				</div>
-			</div>
-		</div>
-	</main>
-
+	<div id="app"></div>
 	<script type="module" src="/src/main.ts"></script>
 </body>
 
